[gd_scene load_steps=7 format=3 uid="uid://dgy6vpaplva53"]

[ext_resource type="PackedScene" uid="uid://doyrkrxsr5qy3" path="res://scenes/card_battle/player_hand.tscn" id="1_0v8t6"]
[ext_resource type="Script" path="res://scenes/card_battle/card_battle.gd" id="1_qgs4d"]
[ext_resource type="PackedScene" uid="uid://dpv1vfcpjsw7v" path="res://scenes/card_battle/play_deck.tscn" id="2_2b5yi"]
[ext_resource type="PackedScene" uid="uid://b4ahtmuys6o0y" path="res://scenes/card_battle/discard_deck.tscn" id="3_wmd2a"]
[ext_resource type="PackedScene" uid="uid://ck13egoma2sei" path="res://scenes/card_battle/enemies_arena.tscn" id="5_x2p5q"]
[ext_resource type="PackedScene" uid="uid://ev5dne8iq6p4" path="res://scenes/enemies/Goblin.tscn" id="6_q0nyr"]

[node name="CardBattle" type="Node"]
script = ExtResource("1_qgs4d")
enemies = Array[PackedScene]([ExtResource("6_q0nyr")])

[node name="PlayerHand" parent="." instance=ExtResource("1_0v8t6")]
offset_left = 320.0
offset_right = 1608.0

[node name="PlayDeck" parent="." instance=ExtResource("2_2b5yi")]
position = Vector2(1736, 864)

[node name="DiscardDeck" parent="." instance=ExtResource("3_wmd2a")]
position = Vector2(133, 880)

[node name="PlayedCard" type="Marker2D" parent="."]
position = Vector2(840, 288)

[node name="EnemiesArena" parent="." instance=ExtResource("5_x2p5q")]

[connection signal="cards_discarded" from="PlayerHand" to="." method="_on_cards_discarded"]
[connection signal="cards_played" from="PlayerHand" to="." method="_on_cards_played"]
[connection signal="card_dealt" from="PlayDeck" to="PlayerHand" method="_on_deck_dealt_card"]
